# zzp-rs

./: Cargo.toml  LICENSE.md
examples/: read-file.rs  uurlog-read-file.rs
src/: date.rs  entry.rs  hours.rs  lib.rs  main.rs  parse.rs  partial_date.rs  types.rs
src/grootboek/: date.rs  mod.rs  parse.rs  types.rs
src/uurlog/: entry.rs  hours.rs  mod.rs  partial_date.rs
tools/: Cargo.toml
tools/src/: grootboek.rs  invoice.rs  lib.rs
vim/grootboek/syntax/: grootboek.vim
vim/uurlog/syntax/: uurlog.vim
