[package]
name = "zzp"
description = "bookkeeping tools for freelancers"
version = "0.1.0"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
gregorian = "0.2.0"
log = "0.4.8"
structopt = "0.3.14"
yansi = "0.5.0"

[dev-dependencies]
assert2 = "0.2.1"
