[package]
name = "zzp"
description = "bookkeeping library for freelancers"
version = "0.1.0"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/zzp-rs"
keywords = ["bookkeeping", "freelancer", "contractor", "ledger"]
edition = "2018"

[dependencies]
gregorian = "0.2.0"

[dev-dependencies]
assert2 = "0.2.1"

[workspace]
members = ["tools"]
