[package]
name = "zzp-tools"
description = "bookkeeping tools for freelancers"
version = "0.1.0"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/zzp-rs"
keywords = ["bookkeeping", "freelancer", "contractor", "ledger"]
categories = ["command-line-utilities"]

edition = "2018"

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
structopt = "0.3.14"
yansi = "0.5.0"
zzp = { version = "0.1.0", path = ".." }
