[package]
name = "zzp-tools"
description = "bookkeeping tools for freelancers"
version = "0.1.0"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/zzp-rs"
keywords = ["bookkeeping", "freelancer", "contractor", "ledger"]
categories = ["command-line-utilities"]

edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
dynfmt = { version = "0.1.5", features = ["curly"] }
env_logger = "0.11.8"
log = "0.4.8"
ordered-float = { version = "5.1.0", features = ["serde"] }
pdf-writer = { git = "https://github.com/de-vri-es/pdf-writer-rs", branch = "main" }
serde = { version = "1.0.121", features = ["derive"] }
toml = "0.5.9"
yansi = "0.5.0"
zzp = { version = "0.1.0", path = ".." }
